# smol-game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Jenkinsfile  README.md  debug.keystore  imgui.ini  pull-engine.sh  push-engine.sh  smol-game.cap  smol-game.smolproject  test_scene.json  xmake.lua
assets/materials/: cutout_lit.mat  grey_lit.mat  simple_lit.mat  transparent.mat  unlit.mat
assets/models/: monkee.glb  plane.glb
assets/scenes/: test.scene  test.smolscene
assets/shaders/: cutout_lit.slang  glass.slang  post_process.slang  simple_lit.slang  smol_globals.slang  transparent_alpha.slang  unlit.frag  unlit.slang  unlit.vert
cmake/: toolchain-windows-clang-cross.cmake  toolchain-windows-clang.cmake
smol-engine/: .clang-format  .gitignore  CMakeLists.txt  README.md
smol-engine/cmake/: toolchain-linux-clang.cmake  toolchain-macos-clang.cmake
smol-engine/include/glad/: gl.h
smol-engine/include/tinygltf/: tiny_gltf.h
smol-engine/src/smol/: defines.h  engine.cpp  events.cpp  main_thread.cpp  physics.cpp  physics.h  util.cpp  util.h  window.cpp  window.h
smol-engine/src/smol/asset/: mesh.cpp  mesh.h  shader.h
smol-engine/src/smol/components/: box_collider.h  collider.cpp  collider.h  mesh_renderer.cpp  renderer_component.cpp  rigidbody.h
smol-engine/src/smol/core/: gameobject.cpp  level.cpp
smol-engine/src/smol/rendering/: material.cpp  spatial_material.cpp  spatial_material.h
src/: main.cpp  smol_game.cpp  test_component.cpp  test_component.h
src/smol/: color.h  engine.h  events.h  log.cpp  log.h  main_thread.h  math_util.h  time_util.cpp  time_util.h
src/smol/asset/: asset.h  asset_manager.cpp  asset_manager.h  shader.cpp  texture.cpp  texture.h
src/smol/components/: box_collider.cpp  camera.cpp  camera.h  capsule_collider.cpp  capsule_collider.h  mesh_renderer.h  renderer_component.h  rigidbody.cpp  transform.cpp  transform.h
src/smol/core/: component.cpp  component.h  gameobject.h  level.h
src/smol/rendering/: material.h  renderer.cpp  renderer.h
